Write unit tests for all utils classes